--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <video class="background-video" autoplay muted loop playsinline>
-    <source src="project/video.mp4" type="video/mp4" />
+    <source src="video.mp4" type="video/mp4" />
     
   </video>
   
@@ -67,7 +67,7 @@
     <section class="about">
       <div class="section__container about__container">
         <div class="about__image about__image-1" id="about">
-          <img src="C:\Users\Farid\Desktop\assets/about-1.jpg" alt="about" />
+          <img src="about-1.jpg" alt="about" />
         </div>
         <div class="about__content about__content-1">
           <h3 class="section__subheader">GET STARTED</h3>
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="about__image about__image-2" id="equipment">
-          <img src="C:\Users\Farid\Desktop\assets/about-2.jpg" alt="about" />
+          <img src="about-2.jpg" alt="about" />
         </div>
         <div class="about__content about__content-2">
           <h3 class="section__subheader">HIKING ESSENTIALS</h3>
@@ -108,7 +108,7 @@
           </div>
         </div>
         <div class="about__image about__image-3" id="blog">
-          <img src="C:\Users\Farid\Desktop\assets/about-3.jpg" alt="about" />
+          <img src="about-3.jpg" alt="about" />
         </div>
         <div class="about__content about__content-3">
           <h3 class="section__subheader">WHERE YOU GO IS THE KEY</h3>
@@ -168,3 +168,4 @@
     <script src="main.js"></script>
   </body>
 </html>
+
