--- a/howtoreachus.html
+++ b/howtoreachus.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <video class="background-video" autoplay muted loop playsinline>
-    <source src="project/videoh.mp4" type="video/mp4" />
+    <source src="videoh.mp4" type="video/mp4" />
     
   </video>
   
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="about__image about__image-2" id="equipment">
-          <img src="project/bytrain.jpg" alt="about" />
+          <img src="bytrain.jpg" alt="about" />
         </div>
         <div class="about__content about__content-2">
           <h3 class="section__subheader">HIKING ESSENTIALS</h3>
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div class="about__image about__image-3" id="blog">
-          <img src="project/guwahatiairport.jpg" alt="about" />
+          <img src="guwahatiairport.jpg" alt="about" />
         </div>
         <div class="about__content about__content-3">
           <h3 class="section__subheader">WHERE YOU GO IS THE KEY</h3>
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="about__image about__image-4" id="blog">
-          <img src="project/shillongairport.jpg" alt="about" />
+          <img src="shillongairport.jpg" alt="about" />
         </div>
         <div class="about__content about__content-4">
           <h3 class="section__subheader">WHERE YOU GO IS THE KEY</h3>
@@ -184,3 +184,4 @@
     <script src="howtoreachus.js"></script>
   </body>
 </html>
+
