--- a/contactus.html
+++ b/contactus.html
@@ -58,7 +58,7 @@
     <section class="about">
       <div class="section__container about__container">
         <div class="about__image about__image-1" id="about">
-          <img src="C:/Users/Farid/Desktop/assets/qrtest.png" alt="about" />
+          <img src="qrtest.png" alt="about" />
         </div>
         <div class="about__content about__content-1">
           <h3 class="section__subheader">GET STARTED</h3>
@@ -159,3 +159,4 @@
     <script src="aboutus.js"></script>
   </body>
 </html>
+
